[package]
name = "papariki"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
quick-protobuf = "0.7"
flate2 = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
nalgebra = "0.21.1"
