[package]
name = "papariki"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-protobuf = "0.7"
flate2 = "1.0"
reqwest = { version = "0.10", features = ["blocking"] }
nalgebra = "0.21.1"

# WASM
wasm-bindgen = "0.2"
