[package]
name = "papariki"
version = "0.1.0"
authors = ["Ryan Williams <git@ryan.nz>"]
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
quick-protobuf = "0.7"
flate2 = "1.0"
ureq = "1.3.0"
nalgebra = "0.21.1"
futures-preview = "0.3.0-alpha.19"

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
console_error_panic_hook = "0.1.6"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3.4"
features = [
  'console',
  'Document',
  'Element',
  'Headers',
  'HtmlCanvasElement',
  'HtmlElement',
  'MouseEvent',
  'Performance',
  'ReadableStream',
  'Request',
  'RequestInit',
  'RequestMode',
  'Response',
  'WebGlBuffer',
  'WebGlRenderingContext',
  'WebGlProgram',
  'WebGlShader',
  'WebGlUniformLocation',
  'Window',
]
